--- a/Shop/WebContent/css/main.css
+++ b/Shop/WebContent/css/main.css
@@ -83,6 +83,14 @@ nav.active{position: fixed; top: 60px; z-index: 999; background-color: #f1f1f1; 
 .move > .top, .move > .bot{border:1px solid #ddd; border-radius: 40px; width: 40px; height: 40px; position: relative; cursor: pointer;}
 .btnAction{width: 100%;height: 100%; position: absolute; top: 0; margin-top: -820px; overflow: hidden; z-index: 99999999; transition: margin-top 1s;}
 .btnAction.active{margin-top: 0; transition: 1s;}
-.btnActionRight{width: 70%;height: 100%;float: left; background-color:rgba(50,9,0,0.7); opacity: 0.3; }
+.btnActionRight{width: 70%;height: 100%;float: left; background-color:rgba(50,9,0,0.7);  }
 .btnActionRight i{font-size: 50px; float: right; margin: 10px; cursor: pointer; color: #fff;}
-.btnActionLeft{width: 30%;height: 100%;float: left;background: #666;}
+.btnActionLeft{width: 30%;height: 100%;float: left;background-color:wheat; position: relative;}
+.snsArea{float: left;}
+.snsItem{width: 250px;height: 250px; margin: 50px; float: left; cursor: pointer;}
+.snsItem > img{width: 200px;height: 200px;}
+.snsItem > p{font-size: 24px; color: #fff; width: 250px; margin-top: 10px;}
+.snsItem:hover.snsItem p{color: yellow;}
+.btnActionLeftDesc{width: 100%; height: 70%; position: absolute; top: 50%; transform: translateY(-50%);}
+.btnActionLeftDesc > h3{font-size: 30px; margin-bottom: 10px;text-align: center;}
+.btnActionLeftDesc > p{font-size: 20px; margin-bottom: 50px;text-align: center;}
